--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+/>
+    <img
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="It's a Lion"
+/>
+    <img
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="It's a lion"
+      title="Rawr!"
+/>
+    
+    
   </body>
 </html>
